--- a/index2.html
+++ b/index2.html
@@ -9,11 +9,13 @@
 <body>
   <main class="container" role="main">
     <section class="visual" aria-hidden="true">
-      <div class="box">Image / Graphique</div>
+      <div class="box">
+        <img src="image/perso.jpg" width="100%" height="100%" />
+      </div>
     </section>
 
     <section class="content">
-      <h1 class="title">Recommandation n°1 — Réduire le gaspillage</h1>
+      <h1 class="title">Recommandation n°2 — Réduire le gaspillage</h1>
       <p class="subtitle">Par Mira</p>
 
       <div class="body">
