--- a/index2.html
+++ b/index2.html
@@ -23,9 +23,9 @@
         Mettre en place un programme de tri, optimiser la chaîne d'approvisionnement, et utiliser des prévisions de vente pour réduire les stocks excédentaires.</p>
 
         <ul>
-          <li>Action 1 : Audit des pertes (court terme)</li>
-          <li>Action 2 : Formation du personnel (moyen terme)</li>
-          <li>Action 3 : Outils d'analyse des ventes (long terme)</li>
+          <li>Action 1 : Audit des pertes</li>
+          <li>Action 2 : Formation du personnel</li>
+          <li>Action 3 : Outils d'analyse des ventes</li>
         </ul>
       </div>
     </section>
