--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
         <div class="thumb">Diapo 2</div>
         <a href="index2.html">Recommandation 2</a>
       </div>
+      <div class="card">
+        <div class="thumb">Diapo 3</div>
+        <a href="1.html">Recommandation 3</a>
     </div>
   </main>
 </body>
