--- a/index1.html
+++ b/index1.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Recommandation #1</h1>
-    
+    <p class="subtitle">Par Idrissa</p>
+
     <p>Optimiser la synergie inter-départementale pour stimuler la création de valeur durable.</p>
     <img src="image/perso.jpg" alt="perso">
 </html>
