--- a/index2.html
+++ b/index2.html
@@ -16,6 +16,7 @@
 
     <section class="content">
       <h1 class="title">Recommandation n°2 — Réduire le gaspillage</h1>
+            <p class="subtitle">Par Mira</p>
       <div class="body">
         <p>Résumé bref de la recommandation en 2–3 phrases :<br>
         Mettre en place un programme de tri, optimiser la chaîne d'approvisionnement, et utiliser des prévisions de vente pour réduire les stocks excédentaires.</p>
