--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
       <div class="card">
         <div class="thumb">Diapo 3</div>
-        <a href="1.html">Recommandation 3</a>
+        <a href="index3.html">Recommandation 3</a>
     </div>
   </main>
 </body>
