--- a/index3.html
+++ b/index3.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>3 - Recommandation</title>
+  <title>1 - Recommandation</title>
   <style>
-    body {
+    body { 
       font-family: Arial, sans-serif;
-      background-color: #f0fff0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      background-color: #f5f5f5;
+      display: flex; 
+      justify-content: center; 
+      align-items: center; 
       height: 100vh;
     }
     .card {
@@ -19,16 +19,15 @@
       border-radius: 10px;
       box-shadow: 0 5px 15px rgba(0,0,0,0.1);
       text-align: center;
-      width: 400px;
     }
     .marquee {
-      overflow: hidden;
+      overflow: hidden; 
       white-space: nowrap;
     }
     .marquee span {
       display: inline-block;
       padding-left: 100%;
-      animation: scroll 8s linear infinite;
+      animation: scroll 10s linear infinite;
     }
     @keyframes scroll {
       0% { transform: translateX(0); }
@@ -38,9 +37,9 @@
 </head>
 <body>
   <div class="card">
-    <h1>Recommandation — Bilal</h1>
-    <div class="marquee"><span>« Mettre en place un programme qualité traçable de la ferme à l'usine. »</span></div>
-    <p>Améliorer la confiance client et répondre aux normes réglementaires.</p>
+    <h1>Recommandation n°3 — Marieme</h1>
+    <div class="marquee"><span>« Automatiser le suivi des stocks pour éviter les ruptures. »</span></div>
+    <p>Mettre en place un système d'alerte en temps réel pour optimiser la gestion.</p>
   </div>
 </body>
 </html>
